# HardyDarty

./: CMakeCache.txt  CMakeLists.txt  README.md  cmake_install.cmake  test  test_main.cpp
PlatformIO/Projects/HartyDarty/: platformio.ini
PlatformIO/Projects/HartyDarty/src/: WiFi Set Thingy  loopTest_w_functionCalling  main.cpp  starting.cpp  test_functions.cpp  test_functions.h
